new branch created

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div id="content" class="col-sm-6 d-sm-block my-auto mx-auto text-center">
           <span id="name" class="d-block text-lg"> Rachel Brown </span >
+    <!-- Carousel -->
           <div id="carouselContent" class="carousel slide" data-ride="carousel">
             <div id="hats" class="carousel-inner text-md" role="listbox">
               <span class="carousel-item active p-4"><p>Author</p></span>
@@ -32,6 +33,7 @@
               <span class="carousel-item p-4"><p>Web Developer</p></span>
             </div>
           </div>
+    <!-- Links -->
           <span id="links" class="text-md">
             <a href="https://www.instagram.com/rachelchardea"><i class="fa fa-instagram mx-2"></i></a>
             <a href="https://github.com/rachelcbrown13"><i class="fa fa-github mx-2"></i></a>
@@ -40,9 +42,9 @@
             <a href="mailto:rachelcbrown13@gmail.com"><i class="fa fa-envelope-square mx-2"></i></a>
           </span>
         </div>
-
+  <!-- Modal for Projects -->
         <div id="contact" class="col d-sm-block mx-auto my-auto text-center">
-          <a class="badge mt-5" data-target="#projectModal" data-toggle="modal" type="button">Current Projects</a>
+          <a class="btn btn-lg btn-secondary badge-pill mt-5 text-white" data-target="#projectModal" data-toggle="modal" type="button">Current Projects</a>
           <div class="modal fade hide" id="projectModal" role="dialog">
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
