--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="modal-body">
                   <div class="row">
                     <div class="col">
-                    <a href="https://github.com/rachelcbrown13/this-is-me-from-a-to-z" target="_blank"><img src="src/img/FrontCover.png" class="img" width="45%" ><br>This is ME from A to Z</a>
+                    <a href="https://rachelcbrown13.github.io/This-is-ME-from-A-to-Z/" target="_blank"><img src="src/img/FrontCover.png" class="img" width="45%" ><br>This is ME from A to Z</a>
                     </div>
                     <div class="col">
                       <a href="https://github.com/rachelcbrown13/apollosSite" target="_blank"><img src="src/img/IMG_2308.jpg" class="img" width="45%"><br>All About Apollos</a>
