--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <div id="main" class="container-fluid mt-5">
+  <div id="main" class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-6 d-sm-block my-5 mx-auto border-lg-right imgBorder ">
           <img alt="headshot" src="src/img/-2209401135990709119_IMG_1012.jpg" class=" rounded-circle rounded-lg d-block mx-auto my-auto" style="width: 65%; height: auto;">
@@ -28,23 +28,23 @@
     <!-- Carousel -->
           <div id="carouselContent" class="carousel slide" data-ride="carousel">
             <div id="hats" class="carousel-inner text-md" role="listbox">
+              <span class="carousel-item p-4"><p>Web Developer</p></span>
               <span class="carousel-item active p-4"><p>Author</p></span>
               <span class="carousel-item p-4"><p>Speaker</p></span>
-              <span class="carousel-item p-4"><p>Web Developer</p></span>
             </div>
           </div>
     <!-- Links -->
           <span id="links" class="text-md">
-            <a href="https://www.instagram.com/rachelchardea"><i class="fa fa-instagram mx-2"></i></a>
-            <a href="https://github.com/rachelcbrown13"><i class="fa fa-github mx-2"></i></a>
-            <a href="https://www.linkedin.com/in/rachel-brown-60409a135/"><i class="fa fa-linkedin-square mx-2"></i></a>
-            <a href="https://www.fb.me/thisismefromatoz"><i class="fa fa-facebook mx-2"></i></a>
-            <a href="mailto:rachelcbrown13@gmail.com"><i class="fa fa-envelope-square mx-2"></i></a>
+            <a href="https://github.com/rachelcbrown13" target="_blank"><i class="fa fa-github mx-2"></i></a>
+            <a href="https://www.linkedin.com/in/rachel-brown-60409a135/" target="_blank"><i class="fa fa-linkedin-square mx-2"></i></a>
+            <a href="https://www.instagram.com/rachelchardea" target="_blank"><i class="fa fa-instagram mx-2"></i></a>
+            <a href="https://www.fb.me/thisismefromatoz" target="_blank"><i class="fa fa-facebook mx-2"></i></a>
+            <a href="mailto:rachelcbrown13@gmail.com" target="_blank"><i class="fa fa-envelope-square mx-2"></i></a>
           </span>
         </div>
   <!-- Modal for Projects -->
         <div id="contact" class="col d-sm-block mx-auto my-auto text-center">
-          <a class="btn btn-lg btn-secondary badge-pill mt-5 text-white" data-target="#projectModal" data-toggle="modal" type="button">Current Projects</a>
+          <a class="btn btn-lg btn-dark badge-pill text-white" data-target="#projectModal" data-toggle="modal" type="button">Current Projects</a>
           <div class="modal fade hide" id="projectModal" role="dialog">
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
