--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div id="carouselContent" class="carousel slide" data-ride="carousel">
             <div id="hats" class="carousel-inner text-md" role="listbox">
               <span class="carousel-item p-4"><p>Web Developer</p></span>
-              <span class="carousel-item active p-4"><p>Author</p></span>
+              <span class="carousel-item active p-4"><p>Authorrr</p></span>
               <span class="carousel-item p-4"><p>Speaker</p></span>
             </div>
           </div>
