--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <div class="modal-body">
                   <div class="row">
                     <div class="col">
-                    <a href="https://rachelcbrown13.github.io/thisismefromatozBootstrap" target="_blank"><img src="src/img/FrontCover.png" class="img" width="45%" ><br>This is ME from A to Z</a>
+                    <a href="https://rachelcbrown13.github.io/thisismefromatozBootstrap" target="_blank"><img src="img/FrontCover.png" class="img" width="45%" ><br>This is ME from A to Z</a>
                     </div>
                     <div class="col">
-                      <a href="https://github.com/rachelcbrown13/apollosSite" target="_blank"><img src="src/img/IMG_2308.jpg" class="img" width="45%"><br>All About Apollos</a>
+                      <a href="https://github.com/rachelcbrown13/apollosSite" target="_blank"><img src="img/IMG_2308.jpg" class="img" width="45%"><br>All About Apollos</a>
                     </div>
                     <div class="col">
-                      <a href="https://github.com/rachelcbrown13/NuCampSite" target="_blank"><img src="src/img/logo.png" class="img" width="45%"><br>NuCampsite</a>
+                      <a href="https://github.com/rachelcbrown13/NuCampSite" target="_blank"><img src="img/logo.png" class="img" width="45%"><br>NuCampsite</a>
                     </div>
                   </div>
                 </div>
