React App added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   <div id="main" class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-6 d-sm-block my-5 mx-auto border-lg-right imgBorder ">
-          <img alt="headshot" src="img/-2209401135990709119_IMG_1012.jpg" class=" rounded-circle rounded-lg d-block mx-auto my-auto" style="width: 65%; height: auto;">
+          <img alt="headshot" src="src/img/-2209401135990709119_IMG_1012.jpg" class=" rounded-circle rounded-lg d-block mx-auto my-auto" style="width: 65%; height: auto;">
+      
         </div>
+        
         <div id="content" class="col-sm-6 d-sm-block my-auto mx-auto text-center">
           <span id="name" class="d-block text-lg"> Rachel Brown </span >
     <!-- Carousel -->
@@ -40,7 +42,7 @@
             <a href="https://www.instagram.com/rachelchardea" target="_blank"><i class="fa fa-instagram mx-2"></i></a>
             <a href="https://www.fb.me/thisismefromatoz" target="_blank"><i class="fa fa-facebook mx-2"></i></a>
             <a href="mailto:rachelcbrown13@gmail.com" target="_blank"><i class="fa fa-envelope-square mx-2"></i></a>
-          </span>
+          </span>          
         </div>
   <!-- Modal for Projects -->
         <div id="contact" class="col d-sm-block mx-auto my-auto text-center">
@@ -58,10 +60,13 @@
                     <a href="https://rachelcbrown13.github.io/thisismefromatozBootstrap" target="_blank"><img src="img/FrontCover.png" class="img" width="45%" ><br>This is ME from A to Z</a>
                     </div>
                     <div class="col">
+                      <a href="https://rachelcbrown13.github.io/thisismefromatozReact" target="_blank"><img src="img/Letter_A.png" class="img" width="45%" ><br>This is ME from A to Z (React)</a>
+                    </div>
+                    <div class="col">
                       <a href="https://github.com/rachelcbrown13/apollosSite" target="_blank"><img src="img/IMG_2308.jpg" class="img" width="45%"><br>All About Apollos</a>
                     </div>
                     <div class="col">
-                      <a href="https://github.com/rachelcbrown13/NuCampSite" target="_blank"><img src="img/logo.png" class="img" width="45%"><br>NuCampsite</a>
+                      <a href="https://rachelcbrown13.github.io/NuCampSite" target="_blank"><img src="img/logo.png" class="img" width="45%"><br>NuCampsite</a>
                     </div>
                   </div>
                 </div>
