new project added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       <a href="https://github.com/rachelcbrown13/apollosSite" target="_blank"><img src="img/IMG_2308.jpg" class="img" width="45%"><br>All About Apollos</a>
                     </div>
                     <div class="col">
-                      <a href="https://rachelcbrown13.github.io/NuCampSite" target="_blank"><img src="img/logo.png" class="img" width="45%"><br>NuCampsite</a>
+                      <a href="https://epic-gates-6cd7d1.netlify.app/" target="_blank"><img src="img/logo.png" class="img" width="45%"><br>NuCampsite</a>
                     </div>
                   </div>
                 </div>
