--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- build:css css/main.css -->
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="src/css/styles.css" />
   <!-- endbuild -->
   <link rel="stylesheet" href="./css/main.css" />
@@ -37,11 +37,12 @@
           </div>
     <!-- Links -->
           <span id="links" class="text-md">
-            <a href="https://github.com/rachelcbrown13" target="_blank"><i class="fa fa-github mx-2"></i></a>
-            <a href="https://www.linkedin.com/in/rachel-brown-60409a135/" target="_blank"><i class="fa fa-linkedin-square mx-2"></i></a>
-            <a href="https://www.instagram.com/rachelchardea" target="_blank"><i class="fa fa-instagram mx-2"></i></a>
-            <a href="https://www.fb.me/thisismefromatoz" target="_blank"><i class="fa fa-facebook mx-2"></i></a>
-            <a href="mailto:rachelcbrown13@gmail.com" target="_blank"><i class="fa fa-envelope-square mx-2"></i></a>
+            <a href="https://github.com/rachelcbrown13" target="_blank"><i class="fa fa-github mx-2" data-toggle="tooltip" data-placement="top" title="Github"></i></a>
+            <a href="https://www.linkedin.com/in/rachel-brown-60409a135/" target="_blank"><i class="fa fa-linkedin-square mx-2" data-toggle="tooltip" data-placement="top" title="LinkedIn"></i></a>
+            <a href="https://www.instagram.com/rachelchardea" target="_blank"><i class="fa fa-instagram mx-2" data-toggle="tooltip" data-placement="top" title="Instagram"></i></a>
+            <a href="https://www.fb.me/thisismefromatoz" target="_blank"><i class="fa fa-facebook mx-2" data-toggle="tooltip" data-placement="top" title="Facebook"></i></a>
+            <a href="mailto:rachelcbrown13@gmail.com" target="_blank"><i class="fa fa-envelope-square mx-2" data-toggle="tooltip" data-placement="top" title="Email Me"></i></a>
+            <a href="./src/img/Rachel.Brown.Resume.WebDev.pdf" target="_blank"><i class="fas fa-file-pdf mx-2" data-toggle="tooltip" data-placement="top" title="Resume"></i></a>
           </span>          
         </div>
   <!-- Modal for Projects -->
